# newsgator

./: .gitignore  CHANGELOG.md  projektplan.md  pyproject.toml
flatpak/: README.md  io.github.achimgrothkopp_ux.Newsgator.desktop  io.github.achimgrothkopp_ux.Newsgator.metainfo.xml  io.github.achimgrothkopp_ux.Newsgator.yaml  python-deps.yaml  regenerate-python-deps.sh  requirements.txt  swap-sdists-for-wheels.py
newsgator/: __main__.py
newsgator/feeds/: base.py  http.py  rss.py  youtube.py
newsgator/models/: __init__.py  article.py  category.py  database.py  source.py
newsgator/sync/: scheduler.py  store.py
newsgator/ui/: article_list.py  article_view.py  filter_toolbar.py  image_text_browser.py  main_window.py  settings.py  source_panel.py  theme.py
newsgator/ui/dialogs/: add_source.py  categories.py  settings.py
newsgator/utils/: archive.py  opml.py
scripts/: check_add_source.py  check_article_list.py  check_article_view.py  check_filter.py  check_http.py  check_rss.py  check_scheduler.py  check_schema.py  check_source_panel.py  check_window.py  check_youtube.py  cli.py
