[project]
name = "newsgator"
version = "0.1.0"
description = "Linux desktop news aggregator for RSS/Atom, HTTP and YouTube sources"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Achim Grothkopp", email = "achimgrothkopp@gmail.com" }]
dependencies = [
    "pyside6>=6.7",
    "qasync>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "feedparser>=6.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[project.scripts]
newsgator = "newsgator.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["newsgator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
